start-sanitize-sky
Wed Jun  3 10:29:47 1998  Doug Evans  <devans@canuck.cygnus.com>

	* mips.h (Elf32_Dvp_Internal_Overlay,Elf32_Dvp_External_Overlay):
	Rename from 64 bit versions, update members to be 32 bits.
	(bfd_dvp_elf32_swap_overlay_in,bfd_dvp_elf32_swap_overlay_out):
	Rename from 64 bit versions.

Sun May 31 15:46:56 1998  Doug Evans  <devans@canuck.cygnus.com>

	* mips.h (SHT_DVP_OVERLAY_TABLE,SHT_DVP_OVERLAY): New section types.
	(SHNAME_DVP_OVERLAY_{TABLE,STRTAB,PREFIX}): Section names.
	(Elf64_Dvp_Internal_Overlay,Elf64_Dvp_External_Overlay): New types.
	(bfd_dvp_elf64_swap_overlay_in,bfd_dvp_elf64_swap_overlay_out):
	Declare.

end-sanitize-sky
Wed May  6 09:45:30 1998  Gavin Koch  <gavin@cygnus.com>

	* mips.h (EF_MIPS_MACH,E_MIPS_MACH_*): Added.

Sat Apr 25 18:35:06 1998  Richard Henderson  <rth@cygnus.com>

	* alpha.h (STO_ALPHA_NOPV, STO_ALPHA_STD_GPLOAD): New.

Wed Apr 15 15:42:45 1998  Richard Henderson  <rth@cygnus.com>

	* common.h (EM_SPARC64): Move and rename to EM_OLD_SPARCV9.
	(EM_SPARCV9): New.  This is the official ABI name and number.

Sat Feb 28 17:04:41 1998  Richard Henderson  <rth@cygnus.com>

	* alpha.h (EF_ALPHA_32BIT, EF_ALPHA_CANRELAX): New.

start-sanitize-sky
Tue Feb 10 12:08:23 1998  Doug Evans  <devans@canuck.cygnus.com>

	* mips.h (STO_DVP_{VIF,GIF): Renamed from STO_DVP_{PKE,GPUIF}.

Wed Jan 28 09:42:48 1998  Doug Evans  <devans@canuck.cygnus.com>

	* mips.h (STO_DVP_{DMA,PKE,GPUIF,VU}): New macros.
	(MIPS_STO_DVP_P): New macro.

end-sanitize-sky
Mon Dec 15 15:07:49 1997  Nick Clifton  <nickc@cygnus.com>

	* m32r.h (EF_M32R_ARCH, E_M32R_ARCH): New flags to
	specify machine architecture.
start-sanitize-m32rx	
	(E_M32RX_ARCH): New flag for m32rx architecture.
end-sanitize-m32rx	
	
Fri Dec  5 11:20:08 1997  Nick Clifton  <nickc@cygnus.com>

	* v850.h: New constants: SHN_V850_SCOMMON, SHN_V850_TCOMMON,
	SHN_V850_ZCOMMON, SHT_V850_SCOMMON, SHT_V850_TCOMMON,
	SHT_V850_ZCOMMON to handle v850 common sections.